--- a/app/about.html
+++ b/app/about.html
@@ -40,7 +40,16 @@
                                 <a class="nav-link" href="index.html">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="about.html">О системе</a>
+                                <a class="nav-link" href="#">Квартиры</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Управление квартирами</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html">О системе</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Блог</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">Контакты</a>
@@ -82,8 +91,8 @@
                     </ol>
                 </nav>
                 <h1 class="page-title">
-    <div>О системе</div>
-</h1>
+                    <div>О системе</div>
+                </h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus aut, modi labore ad dolor, deserunt quam facilis ipsum laudantium provident nostrum quod alias ducimus. Aliquid ipsum minus magni ipsa delectus, et laborum nemo vel odit soluta blanditiis dicta earum architecto provident veniam consectetur id debitis molestiae amet excepturi eos! Delectus, reiciendis quidem molestiae libero. Illo repellat magni at iusto odio ea dolorem cum fugit est, error et modi recusandae aperiam quos vero corrupti nihil optio cumque distinctio fuga vitae, voluptate? Reprehenderit debitis iure est quia nihil facilis. Sed error unde impedit, accusantium voluptatem rem quibusdam asperiores, omnis, corrupti eaque laudantium?</p>
             </div>
         </main>
@@ -91,9 +100,24 @@
             <div class="container">
                 <div class="py-3 my-4">
                     <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
-                        <li class="nav-item"><a href="index.html" class="nav-link px-2">Главная</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link px-2">О системе</a></li>
-                        <li class="nav-item"><a href="contacts.html" class="nav-link px-2">Контакты</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Квартиры</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Управление квартирами</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">О системе</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Блог</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacts.html">Контакты</a>
+                        </li>
                     </ul>
                     <p class="text-center">© 2022, rent-pult.ru</p>
                 </div>
