--- a/app/authorization.html
+++ b/app/authorization.html
@@ -13,6 +13,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <!-- end favicon.ico -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/app.min.css">
@@ -38,7 +39,16 @@
                                 <a class="nav-link" href="index.html">Главная</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#">Квартиры</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Управление квартирами</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="about.html">О системе</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Блог</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">Контакты</a>
@@ -108,9 +118,24 @@
             <div class="container">
                 <div class="py-3 my-4">
                     <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
-                        <li class="nav-item"><a href="index.html" class="nav-link px-2">Главная</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link px-2">О системе</a></li>
-                        <li class="nav-item"><a href="contacts.html" class="nav-link px-2">Контакты</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Квартиры</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Управление квартирами</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">О системе</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Блог</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacts.html">Контакты</a>
+                        </li>
                     </ul>
                     <p class="text-center">© 2022, rent-pult.ru</p>
                 </div>
