--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,16 @@
                                 <a class="nav-link active" href="index.html">Главная</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="#">Квартиры</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Управление квартирами</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="about.html">О системе</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Блог</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts.html">Контакты</a>
@@ -92,9 +101,24 @@
             <div class="container">
                 <div class="py-3 my-4">
                     <ul class="nav justify-content-center border-bottom border-secondary pb-3 mb-3">
-                        <li class="nav-item"><a href="index.html" class="nav-link px-2">Главная</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link px-2">О системе</a></li>
-                        <li class="nav-item"><a href="contacts.html" class="nav-link px-2">Контакты</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Квартиры</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Управление квартирами</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">О системе</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Блог</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacts.html">Контакты</a>
+                        </li>
                     </ul>
                     <p class="text-center">© 2022, rent-pult.ru</p>
                 </div>
